# atm-nx-toolkit

./: .gitignore  LICENSE.md  README.MD  color.py  config.json  custom.py  example.py  main.py  pyproject.toml  requirements.txt
cfg/: atm-utility.json  config.json  custom-bootlogo.json  fw.json  gamelist.txt
cfg/sd/: emunand.json  sysnand.json
cfg/sd/emunand/: erista-patched.json  erista-unpatched.json  mariko.json
cfg/sd/sysnand/: erista-unpatched.json
docs/: README.MD
src/: misc.py  sdsetup.py
src/cheat/: manager.py
src/fw/: download.py
src/sd/: custom.py  setup.py
src/utility/: launcher.py  logo_patch.py  splash.py
