[tool.poetry]
name = "nx-toolkit"
version = "0.1.0"
description = ""
authors = ["Code O Tam Long <codeotamlong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
args = "^0.1.0"
clint = "^0.5.1"
"ips.py" = "^0.1.2"
bs4 = "^0.0.2"
Unidecode = "^1.3.8"
pillow = "^10.2.0"
pyunpack = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
